      "load large enemy sprite", "replace small large sprite",
      "load attack sprite", "replace attack sprite",
      "load weapon sprite", "replace weapon sprite",
      "load border sprite", "replace border sprite",
      "load portrait sprite", "replace portrait sprite",
      "free sprite", "place sprite", "set sprite visible",
      "set sprite palette", "clone sprite", "set sprite frame",
      "get sprite frame", "sprite frame count", "slice is sprite",
      "sprite layer", "horiz flip sprite", "vert flip sprite",
      "sprite is horiz flipped", "sprite is vert flipped"
      [Mike, James]
    * "slice x", "slice y", "set slice x", "set slice y", "slice width",
      "slice height", "set horiz align", "set vert align",
      "set horiz anchor", "set vert anchor", "free slice",
      "first child", "next sibling", "last child",
      "previous sibling", "create container", "set parent", 
      "check parentage", "slice screen x", "slice screen y",
      "slice is container", "create rect", "slice is rect",
      "set slice width", "set slice height", "get rect style",
      "set rect style", "get rect fgcol", "set rect fgcol",
      "get rect bgcol", "set rect bgcol", "get rect border",
      "set rect border", "get rect trans", "set rect trans",
      "first container child", "next container child",
      "first sprite child", "next sprite sibling", "first rect child",
      "next rect sibling", "realign slice", "center slice",
      "slice collide point", "slice collide", "slice contains",
      "set slice screen x", "set slice screen y", "clamp slice",
      "set padding", "set top padding", "get top padding",
      "set left padding", "get left padding", "set right padding",
      "get right padding", "set bottom padding", "get bottom padding",
      "fill parent", "is filling parent", "slice to back",
      "slice to front", "Y sort children", "set sort order",
      "get sort order", "sort children", "set slice extra",